--- a/assets/scss/woocommerce/_nav-cart.scss
+++ b/assets/scss/woocommerce/_nav-cart.scss
@@ -70,8 +70,7 @@
     @include cart-widget();
   }
   #nv-primary-navigation .widget_shopping_cart li.mini_cart_item {
-    //Padding right is 61px to allow image on right (45px) which should be padded L/R (8px) { 45 + 8 + 8 = 61 }
-    padding: $spacing-xs 61px $spacing-xs $spacing-xs;
+    padding: $spacing-xs;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     align-items: baseline;
@@ -79,10 +78,10 @@
     position: relative;
     width: 350px;
     &:hover {
-      background: $muted-white;
+      background: #f9f9f9;
     }
     > a {
-      padding: 0;
+      padding: 0 $spacing-lg 0 0;
       display: inline;
       grid-column: span 10;
       grid-row-start: 1;
