--- a/assets/scss/woocommerce/_sidebar.scss
+++ b/assets/scss/woocommerce/_sidebar.scss
@@ -37,28 +37,18 @@
 .woocommerce .widget_shopping_cart .cart_list li, .woocommerce.widget_shopping_cart .cart_list li {
   font-size: .85em;
   border-bottom: $muted-border;
-  //Padding right is 61px to allow image on right (45px) which should be padded L/R (8px) { 45 + 8 + 8 = 61 }
-  padding: $spacing-xs 61px $spacing-xs 2em;
+  margin: $spacing-xs 0;
   position: relative;
   img {
     position: absolute;
-    right: $spacing-xs;
-    top: 50%;
-    transform: translateY(-50%);
+    right: 0;
     width: 45px;
   }
   &:last-child {
     border: none;
   }
-  dl.variation {
-    padding: 0;
-    border: 0;
-  }
-  dd.variation-Size {
-    margin-bottom: 0;
-  }
-  a.remove {
-    top: $spacing-xs;
+  a:not(.remove) {
+    padding-right: 61px;
   }
 }
 
